<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The CyanogenMod Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="zukref_title">ZUK Extras</string>
	
    <!-- Category title -->
    <string name="graphics_title">Graphics</string>

    <!-- Kcal -->
    <string name="kcal_title">Display color</string>
    <string name="kcal_summary">Display color calibration using KCAL</string>
    <string name="kcal_enabled_title">Enable KCAL</string>
    <string name="kcal_enabled_summary">Turn on display calibration using KCAL</string>
    <string name="kcal_red">Red</string>
    <string name="kcal_green">Green</string>
    <string name="kcal_blue">Blue</string>
    <string name="kcal_saturation">Saturation</string>
    <string name="kcal_contrast">Constrast</string>
    <string name="menu_reset">Reset</string>
    <string name="kcal_color_temp">Color temperature (K)</string>	

	<!-- Spectrum Profiles -->
    <string name="spectrum_profile_title">SPECTRUM Profile</string>
    <string name="spectrum_title">SPECTRUM Profile</string>
    <string name="spectrum_summary">Choose your power saver profile</string>
    <string name="spectrum_dialogTitle">Choose your power saver profile</string>

</resources>
