<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/graphics_title">

        <PreferenceScreen
                android:key="kcal"
                android:fragment="com.lineageos.settings.zukpref.DisplayCalibration"
                android:summary="@string/kcal_summary"
                android:title="@string/kcal_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="spectrum_profile"
        android:title="@string/spectrum_profile_title" >

		<ListPreference
			android:key="spectrum"
			android:title="@string/spectrum_title"
			android:summary="@string/spectrum_summary"
			android:defaultValue="0"
			android:entries="@array/spectrum_profiles"
			android:entryValues="@array/spectrum_values"
			android:dialogTitle="@string/spectrum_dialogTitle" />

    </PreferenceCategory>

</PreferenceScreen>
